Failure detection 90% works